fixed jumping of bar chart y axis

--- a/src/www/css/app/details.less
+++ b/src/www/css/app/details.less
@@ -126,7 +126,7 @@
         position: absolute;
         height: 100%;
         width: 15.5%;
-        right: 0;
+        left: 84.5%;
         .border-highlight;
         .revenue-by-category{
           &.base_pie {
